--- a/App/res/layout/activity_main.xml
+++ b/App/res/layout/activity_main.xml
@@ -1,47 +1,8 @@
-<android.support.v4.widget.DrawerLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-	xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/drawer_layout"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/container"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" 
-    tools:context=".MainActivity" >
+    android:layout_height="match_parent"
+    tools:context="nl.creationinc.swopp.MainActivity"
+    tools:ignore="MergeRootFrame" />
 
-	<LinearLayout 
-	    android:layout_width="match_parent"
-	    android:layout_height="match_parent"
-	    android:paddingBottom="@dimen/activity_vertical_margin"
-	    android:paddingLeft="@dimen/activity_horizontal_margin"
-	    android:paddingRight="@dimen/activity_horizontal_margin"
-	    android:paddingTop="@dimen/activity_vertical_margin"
-	    tools:context="nl.creation.fitwall.MainActivity$PlaceholderFragment"
-	    android:orientation="vertical">
-	    
-		<Button android:id="@+id/kleding"
-	    	android:layout_width="match_parent"
-	       	android:layout_height="wrap_content"
-	       	android:text="Kleding" />
-	   <Button android:id="@+id/sieraden"
-	      	android:layout_width="match_parent"
-	       	android:layout_height="wrap_content" 
-	       	android:text="Sieraden" />
-	   <Button android:id="@+id/accessoires"
-	       	android:layout_width="match_parent"
-	       	android:layout_height="wrap_content"
-	       	android:text="Accessoires" />
-	   <Button android:id="@+id/login"
-	       	android:layout_width="match_parent"
-	       	android:layout_height="wrap_content"
-	       	android:text="Login" />
-	</LinearLayout>
-	
-	<!-- The navigation drawer -->
-    <ListView android:id="@+id/left_drawer"
-        android:layout_width="240dp"
-        android:layout_height="match_parent"
-        android:layout_gravity="start"
-        android:choiceMode="singleChoice"
-        android:divider="#3B5998"
-        android:dividerHeight="1dp"
-        android:background="#333" />
-    
-</android.support.v4.widget.DrawerLayout>
