--- a/App/res/layout/fragment_main.xml
+++ b/App/res/layout/fragment_main.xml
@@ -2,23 +2,39 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="nl.creation.fitwall.MainActivity$PlaceholderFragment"
-    android:orientation="vertical">
-    
-	<Button android:id="@+id/kleding"
-    	android:layout_width="match_parent"
-       	android:layout_height="wrap_content"
-       	android:text="Kleding"></Button>
-   <Button android:id="@+id/sieraden"
-      	android:layout_width="match_parent"
-       	android:layout_height="wrap_content" 
-       	android:text="Sieraden"></Button>
-   <Button android:id="@+id/accessoires"
-       	android:layout_width="match_parent"
-       	android:layout_height="wrap_content"
-       	android:text="Accessoires"></Button>
+    tools:context="nl.creation.fitwall.MainActivity$PlaceholderFragment" >
+
+    <Button
+        android:id="@+id/kleding"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:drawableLeft="@drawable/hairy"
+        android:maxLines="1"
+        android:text="Kleding" >
+
+    </Button>
+
+    <Button
+        android:id="@+id/sieraden"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:drawableLeft="@drawable/hairy"
+        android:text="Sieraden" >
+
+    </Button>
+
+    <Button
+        android:id="@+id/accessoires"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:drawableLeft="@drawable/hairy"
+        android:text="Accessoires" >
+
+    </Button>
+
 </LinearLayout>
