--- a/App/res/layout/kleding.xml
+++ b/App/res/layout/kleding.xml
@@ -3,6 +3,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
-    
+
+    <ImageView
+        android:id="@+id/imageView1"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:src="@drawable/kleding" />
 
 </LinearLayout>
