--- a/App/res/layout/drawer_listview_item.xml
+++ b/App/res/layout/drawer_listview_item.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<TextView  xmlns:android="http://schemas.android.com/apk/res/android"
+<TextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@android:id/text1"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:textColor="#cfa433"
-    android:minHeight="?android:attr/listPreferredItemHeightSmall"
+    android:layout_height="wrap_content"
     android:textAppearance="?android:attr/textAppearanceListItemSmall"
     android:gravity="center_vertical"
-    android:paddingLeft="15dp"
-    android:paddingRight="40dp" />
+    android:paddingLeft="16dp"
+    android:paddingRight="16dp"
+    android:textColor="#fff"
+    android:minHeight="?android:attr/listPreferredItemHeightSmall"/>
