--- a/App/res/menu/main.xml
+++ b/App/res/menu/main.xml
@@ -5,8 +5,14 @@
 
     <item
         android:id="@+id/action_settings"
-        android:orderInCategory="100"
+        android:orderInCategory="99"
         android:title="@string/action_settings"
+        app:showAsAction="never"/>
+    
+    <item
+        android:id="@+id/action_log_out"
+        android:orderInCategory="100"
+        android:title="@string/action_log_out"
         app:showAsAction="never"/>
 
 </menu>
