--- a/App/res/values/strings_activity_login.xml
+++ b/App/res/values/strings_activity_login.xml
@@ -6,13 +6,12 @@
     <string name="prompt_email">Email</string>
     <string name="prompt_username">Username</string>
     <string name="prompt_password">Password</string>
-    <string name="action_sign_in_register"><b>Sign in</b> or register</string>
-    <string name="action_sign_in_short">Sign in</string>
+    <string name="action_sign_in"><b>Log in</b></string>
+    <string name="action_register">Register</string>
+    <string name="action_sign_in_short">Log in</string>
     <string name="action_forgot_password">Recover lost password</string>
-    <string name="login_progress_signing_in">Signing in&#8230;</string>
-    <string name="error_invalid_email">This email address is invalid</string>
-    <string name="error_invalid_password">This password is too short</string>
-    <string name="error_incorrect_password">This password is incorrect</string>
+    <string name="login_progress_signing_in">Logging in&#8230;</string>
     <string name="error_field_required">This field is required</string>
+    <string name="error_incorrect_username_password">Username and/or password is incorrect</string>
 
 </resources>
