--- a/Swopp2/res/layout/activity_main.xml
+++ b/Swopp2/res/layout/activity_main.xml
@@ -1,12 +1,40 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<android.support.v4.widget.DrawerLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+	xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="${packageName}.${activityClass}" >
+    android:layout_height="match_parent" >
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/hello_world" />
-
-</RelativeLayout>
+	<LinearLayout 
+	    android:layout_width="match_parent"
+	    android:layout_height="match_parent"
+	    tools:context="nl.creation.fitwall.MainActivity$PlaceholderFragment"
+	    android:orientation="vertical">
+	    
+		<Button android:id="@+id/kleding"
+	    	android:layout_width="match_parent"
+	       	android:layout_height="wrap_content"
+	       	android:text="@string/kleding" />
+		
+	   <Button android:id="@+id/sieraden"
+	      	android:layout_width="match_parent"
+	       	android:layout_height="wrap_content" 
+	       	android:text="@string/sieraden" />
+	   
+	   <Button android:id="@+id/accessoires"
+	       	android:layout_width="match_parent"
+	       	android:layout_height="wrap_content"
+	       	android:text="@string/accessoires" />
+	</LinearLayout>
+	
+	<!-- The navigation drawer -->
+    <ListView android:id="@+id/left_drawer"
+        android:layout_width="240dp"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:choiceMode="singleChoice"
+        android:divider="@android:color/transparent"
+        android:dividerHeight="0dp"
+        android:background="#111" />
+    
+</android.support.v4.widget.DrawerLayout>
