--- a/Swopp2/res/layout/activity_main.xml
+++ b/Swopp2/res/layout/activity_main.xml
@@ -8,10 +8,9 @@
 	<LinearLayout 
 	    android:layout_width="match_parent"
 	    android:layout_height="match_parent"
-	    tools:context="nl.creation.fitwall.MainActivity$PlaceholderFragment"
 	    android:orientation="vertical">
 	    
-		<Button android:id="@+id/clothing"
+		<Button android:id="@+id/kleding"
 	    	android:layout_width="match_parent"
 	       	android:layout_height="wrap_content"
 	       	android:text="@string/kleding" />
@@ -35,6 +34,6 @@
         android:choiceMode="singleChoice"
         android:divider="@android:color/transparent"
         android:dividerHeight="0dp"
-        android:background="#111" />
+        android:background="#111"/>
     
 </android.support.v4.widget.DrawerLayout>
