--- a/Swopp2/res/layout/activity_clothing.xml
+++ b/Swopp2/res/layout/activity_clothing.xml
@@ -1,48 +1,12 @@
-<?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
+    tools:context="${packageName}.${activityClass}" >
 
     <TextView
-        android:id="@+id/textView1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Name product"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
-
-    <ImageView
-        android:id="@+id/imageView1"
         android:layout_width="wrap_content"
-        android:layout_height="236dp"
-        android:src="@drawable/kleding" />
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="67dp"
-        android:orientation="horizontal" >
-
-        <ImageButton
-            android:id="@+id/like"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:scaleType="fitCenter"
-            android:src="@drawable/like" />
-
-        <ImageButton
-            android:id="@+id/dislike"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:scaleType="fitCenter"
-            android:src="@drawable/dislike" />
-    </LinearLayout>
-
-    <Button
-        android:id="@+id/button1"
-        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Next" />
+        android:text="@string/hello_world" />
 
-</LinearLayout>
+</RelativeLayout>
