--- a/Swopp2/res/layout/activity_clothing.xml
+++ b/Swopp2/res/layout/activity_clothing.xml
@@ -1,12 +1,57 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<?xml version="1.0" encoding="utf-8"?>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="${packageName}.${activityClass}" >
+    android:orientation="vertical"
+    android:scaleGravity="center_vertical|center_horizontal" >
 
     <TextView
-        android:layout_width="wrap_content"
+        android:id="@+id/textView1"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/hello_world" />
+        android:layout_weight="0.27"
+        android:text="Name product"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textSize="35sp" />
 
-</RelativeLayout>
+    <ImageView
+        android:id="@+id/mainImgView"
+        android:layout_width="match_parent"
+        android:layout_height="236dp"
+        android:layout_weight="5.23" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="67dp"
+        android:layout_weight="1"
+        android:orientation="horizontal" >
+
+        <ImageButton
+            android:id="@+id/like_button"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:adjustViewBounds="true"
+            android:baselineAlignBottom="true"
+            android:maxHeight="20dp"
+            android:scaleType="fitCenter"
+            android:src="@drawable/like" />
+
+        <ImageButton
+            android:id="@+id/dislike_button"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:scaleType="fitCenter"
+            android:src="@drawable/dislike" />
+    </LinearLayout>
+
+    <Button
+        android:id="@+id/next_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:text="Next"
+        android:textSize="35sp" />
+
+</LinearLayout>
