--- a/Swopp2/res/layout/activity_clothing.xml
+++ b/Swopp2/res/layout/activity_clothing.xml
@@ -20,6 +20,14 @@
         android:layout_height="236dp"
         android:layout_weight="5.23" />
 
+    <TextView
+        android:id="@+id/likes"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="right"
+        android:layout_weight="0.27"
+        android:text="Likes: 0" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="67dp"
